--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -91,7 +91,10 @@
             transition: color 0.3s ease, background-color 0.3s;
         }
         /*==== hover ====*/
-        li:hover, li.px-item-active {color: var(--color-hvr);}
+        li:hover, li.px-item-active {
+            color: var(--color-hvr);
+            > a {color: var(--color-hvr);}
+        }
     }
 
     .arrow-icon::before {
