--- a/src/sass/integration/_wordpress.scss
+++ b/src/sass/integration/_wordpress.scss
@@ -56,7 +56,10 @@ body:not(.wp-admin):not([class*="login"]), body.block-editor-page, .phenix-wp-de
 /*==== Helpers Fixes ====*/
 .full-screen {min-height: 100vh;}
 .full-screen-wide {min-height: 85vh;}
+.wp-block-phenix-popup .modal-content {pointer-events: none;}
+.wp-block-phenix-popup .modal-content > * {pointer-events: all;}
 .pos-overlap[data-sticky]:not(.is-sticky) {background-color: transparent;}
 .full-screen, .full-screen-wide {
     > [class*="row"], > [class*="flexbox"] {min-height: inherit;}
 }
+
